Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-33008

Warning unknown signal QPlatformFileDialogHelper::directoryEntered

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P3: Somewhat important
    • 5.2.0
    • 5.2.0
    • Quick: Dialogs
    • None
    • qtdeclarative/dev: 509f1fecce99b918eddac445989a624d0431b6d1

    Description

      On Ubuntu 11.10 using the dev branch (520)

      1 - Run the controls gallery example
      2 - Ctrl+o to open the file dialog

      => problem on ubuntu it creates the warning:
      "QObject::connect: No such signal QGtk2FileDialogHelper::directoryEntered(QString) in qquickplatformfiledialog.cpp:169
      "

      Because on directoryEntered(QUrl) is defined.

      Attachments

        For Gerrit Dashboard: QTBUG-33008
        # Subject Branch Project Status CR V

        Activity

          People

            Unassigned Unassigned
            carochao Caroline Chao (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes