QQuickPlatformFileDialog: fix directoryEntered() signal connection

Task-number: QTBUG-33008
Change-Id: I8c4d06bb9dded7b894ca576efd0a64dce9f9a720
Reviewed-by: Shawn Rutledge <shawn.rutledge@digia.com>