src/imports/dialogs/qquickplatformfiledialog.cpp
@@ -166,7 +166,7 @@ QPlatformFileDialogHelper *QQuickPlatformFileDialog::helper()
            ->createPlatformDialogHelper(QPlatformTheme::FileDialog));
         if (!m_dlgHelper)
             return m_dlgHelper;
-        connect(m_dlgHelper, SIGNAL(directoryEntered(QString)), this, SIGNAL(folderChanged()));
+        connect(m_dlgHelper, SIGNAL(directoryEntered(QUrl)), this, SIGNAL(folderChanged()));
         connect(m_dlgHelper, SIGNAL(filterSelected(QString)), this, SIGNAL(filterSelected()));
         connect(m_dlgHelper, SIGNAL(accept()), this, SLOT(accept()));
         connect(m_dlgHelper, SIGNAL(reject()), this, SLOT(reject()));
